# scaffold

./: README.md  Scaffold.ps1
cmake-cpp/: CMakePresets.json  README.md
cmake-cpp/libs/: CMakeLists.txt  README.md
cmake-cpp/src/: CMakeLists.txt  main.cpp  main.hpp
empty-cmake-cpp/: .gitignore  CMakeLists.txt  README.md
empty-cmake-cpp/src/: main.hpp
express-mongo-js/: .dockerignore  .env.copy  DockerFile  README.md  docker-compose.yml  package.json  server.js
express-mongo-js/database/: 01_init.js  02_collections.js  03_seed.js
express-mongo-js/middlewares/: error.middleware.js
express-mongo-js/routes/: index.js
express-mongo-js/utils/: db.util.js  http.util.js  mail.util.js
express-mongo-js/validators/: auth.validator.js
express-mongoose-js/: .gitignore  README.md  package.json  server.js
express-mongoose-js/middlewares/: error.middleware.js
express-mongoose-js/utils/: db.util.js  hash.util.js  index.js
gin-mongo-go/: .env.copy  go.mod  main.go
gin-mongo-go/config/: env.config.go
gin-mongo-go/services/: registry.go
gin-mongo-go/services/user/: user.controller.go  user.go  user.model.go  user.validator.go
gin-mongo-go/utils/: error.util.go
gin-mysql-go/: .dockerignore  .env.copy  .gitignore  DockerFile  docker-compose.yml  go.mod  go.sum  main.go
gin-mysql-go/config/: db.config.go  env.config.go
gin-mysql-go/controllers/: index.go  user.controller.go
gin-mysql-go/database/: 01_init.sh  02_shemas.sh  03_seed.sh
gin-mysql-go/enums/: user.enum.go
gin-mysql-go/middlewares/: error.middleware.go
gin-mysql-go/models/: index.go  user.model.go
gin-mysql-go/services/: registry.go
gin-mysql-go/services/user/: user.controller.go  user.go  user.model.go
gin-mysql-go/utils/: error.util.go  hash.util.go
gin-mysql-go/validators/: auth.validator.go
react-vite-ts/: .env.copy  .gitignore  README.md  package.json  vite.config.ts
react-vite-ts/src/: main.tsx  theme.config.ts
react-vite-ts/src/contexts/ThemeContext/: ThemeContext.ts  ThemeProvider.tsx  index.ts
react-vite-ts/src/hooks/: useLocalStorage.ts  useSessionStorage.ts
react-vite-ts/src/routes/: Router.tsx
react-vite-ts/src/routes/pages/: NotFoundPage.tsx
react-vite-ts/src/scss/: main.scss  variables.scss
react-vite-ts/src/utils/: format.util.ts
