# Create a directory for a external library and write a CMakeLists.txt file for it.
# Make sure you add target include directories and target link libraries with PUBLIC keyword,
# if they needed by the main project as well as the library.

# Then add the directory here.
# eg.
# add_subdirectory(glfw)
# add_subdirectory(imgui)

add_subdirectory(logger)